--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 
   <script src="FuzzySearch.js"></script>
+  <script src="ObjectAssignPolyfill.js"></script>
   <script type="text/javascript" src="script.js"></script>
   <title>React App</title>
 </head>
