--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="theme-color" content="#000000">
 
   <link rel="stylesheet" type="text/css" href="styles.css">
-
+  
+  <script src="ObjectAssignPolyfill.js"></script>
   <script src="FuzzySearch.js"></script>
   <script type="text/javascript" src="script.js"></script>
   <title>React App</title>
